--- a/package.json
+++ b/package.json
@@ -1,17 +1,25 @@
 {
-  "name": "Lesson_1",
+  "name": "Webinar_node_js",
   "version": "1.0.0",
   "description": "",
-  "main": "script.js",
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serv": "nodemon script.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/KPEKZ/Webinar_node_js.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/KPEKZ/Webinar_node_js/issues"
+  },
+  "homepage": "https://github.com/KPEKZ/Webinar_node_js#readme",
   "dependencies": {
     "ansi": "^0.3.1",
+    "minimist": "^1.2.0",
     "nodemon": "^2.0.2"
   }
 }
