--- a/package.json
+++ b/package.json
@@ -19,7 +19,11 @@
   "homepage": "https://github.com/KPEKZ/Webinar_node_js#readme",
   "dependencies": {
     "ansi": "^0.3.1",
+    "cheerio": "^1.0.0-rc.3",
+    "clix-logger": "^2.0.0",
     "minimist": "^1.2.0",
-    "nodemon": "^2.0.2"
+    "nodemailer": "^6.4.2",
+    "nodemon": "^2.0.2",
+    "request": "^2.88.0"
   }
 }
