--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "ansi": "^0.3.1",
     "cheerio": "^1.0.0-rc.3",
     "clix-logger": "^2.0.0",
+    "consolidate": "^0.15.1",
+    "express": "^4.17.1",
+    "handlebars": "^4.7.2",
     "minimist": "^1.2.0",
     "nodemailer": "^6.4.2",
     "nodemon": "^2.0.2",
